<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="20dp"
    tools:context=".CheckZodiac">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:background="@drawable/question">

            <androidx.cardview.widget.CardView
                android:id="@+id/img_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/header_check"
                    android:textSize="18sp"
                    android:textColor="@color/grey_opa_90"
                    android:paddingStart="5dp"
                    android:gravity="center_vertical"
                    android:background="@color/black_opa_70"
                    tools:ignore="RtlSymmetry" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:layout_marginEnd="5dp"
                android:text="@string/name_label"
                android:textColor="@color/grey_opa_90"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:layout_marginEnd="20dp"
                android:inputType="textPersonName"
                android:hint="@string/input_name"
                android:autofillHints="@string/input_name"
                android:textSize="14sp"
                android:textColor="@color/grey_opa_90"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:layout_marginEnd="5dp"
                android:text="@string/date_label"
                android:textColor="@color/grey_opa_90"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/input_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number"
                android:layout_marginEnd="20dp"
                android:hint="@string/input_date"
                android:autofillHints="@string/input_date"
                android:textSize="14sp"
                android:textColor="@color/grey_opa_90"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/month_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:layout_marginEnd="5dp"
                android:text="@string/month_label"
                android:textColor="@color/grey_opa_90"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/monthSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/check_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:text="@string/check_button"
                android:onClick="checkZodiac"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/save_button"
                android:onClick="saveData"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/show_zodiac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:autofillHints=""
                android:ems="6"
                android:textSize="14sp"
                android:enabled="false"
                android:focusable="false"
                android:layout_gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="2"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/home_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/homepage"
                android:onClick="homePage"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/check_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:text="@string/checkpage"
                android:textColor="@color/purple_200" />

            <TextView
                android:id="@+id/history_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/historypage"
                android:onClick="showPage"
                tools:ignore="UsingOnClickInXml"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>