<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/bg"
    tools:context=".MainPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/header"
                android:textColor="@color/grey_opa_90"
                android:textSize="18sp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/img_header"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/header_img"
                android:contentDescription="@string/img_header_icon" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                app:cardCornerRadius="50dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:src="@drawable/binocular"
                    android:contentDescription="@string/img_header_icon" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/check_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_desc"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"/>

                <Button
                    android:id="@+id/check_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_button"
                    android:textSize="16sp"
                    android:layout_gravity="end"
                    android:onClick="checkZodiac"
                    tools:ignore="UsingOnClickInXml" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/history"
                    android:contentDescription="@string/img_header_icon" />
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="@string/history_button"
                android:textSize="14sp"
                android:onClick="showHistory"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/home_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/homepage"
                android:textColor="@color/purple_200"/>

            <TextView
                android:id="@+id/check_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:text="@string/checkpage"
                android:onClick="checkZodiac"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/history_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/historypage"
                android:onClick="showHistory"
                tools:ignore="UsingOnClickInXml"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>