<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context=".ShowHistory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_header"
            android:textSize="18sp"
            android:textColor="@color/grey_opa_90"
            android:layout_marginVertical="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_opa_90"
                    android:paddingStart="7dp"
                    android:text=""
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

            </ScrollView>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/home_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/homepage"
                android:onClick="homePage"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/check_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:text="@string/checkpage"
                android:onClick="checkPage"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/history_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/historypage"
                android:textColor="@color/purple_200"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>